# Hermod

./: .gitignore  :  Cargo.toml  README.md  config.toml
calice/: Cargo.toml
calice/src/: lib.rs
calice/src/models/: network.rs
hermod/: Cargo.toml  config.toml
hermod/src/: main.rs
hermod/src/models/: server.rs
hermod/src/utils/: commands.rs  config.rs  mod.rs
network/: Cargo.toml
src/: app.rs  main.rs  ui.rs
src/models/: api.rs  client.rs  encrypt.rs  file_whrite.rs  file_write.rs  mod.rs  network.rs  server.rs
src/types/: communication.rs
src/utils/: commands.rs  config.rs  input.rs  mod.rs  starter.rs
